Compiler Bouw/compiler/test/basic/stephen/fail/duplicate.cvc
// Should produce a context analysis due to duplicate function definition

#include "civic.h"

export int main() {
	int a = 560;
	int b = 320;

	void gcd() {}

    void gcd() {
        gcd();
    }

	while(a != b) gcd();

    printInt(a);
    printNewlines(1);

    return 0;
}
